# rust-sand-sim

./: Cargo.toml
shaders/: shader.wgsl
src/: main.rs  model.rs  primitives.rs  texture.rs  utils.rs  wgpu_app.rs
