[package]
name = "rust-sand-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
winit = "0.29"
wgpu = { version = "22.1.0", features= ["spirv"] }
cfg-if = "1"
env_logger = "0.11"
winit_input_helper = "0.16.0"
glam = { version = "0.28.0", features = ["bytemuck"] }
bytemuck = { version = "1.19.0", features = ["derive"] }
tobj = { version = "3", features = ["log"] }
png = "0.17"
web-time = "1.1.0"
pollster = "0.3"